[package]
edition = "2024"
name = "ratatui-wasm-backend"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "*"

ratatui.version = "0.29.0"
# Crossterm doesn't support WASM.
# See: https://github.com/crossterm-rs/crossterm/issues/654
# So we disable crossterm and write our own Backend:
ratatui.default-features = false
ratatui.features = ["unstable-widget-ref", "macros"]

# We use Anes to implement the backend. It also has a decent input event parser.
# We export it for easy reuse:
anes.features = [ "parser" ]
# anes.version = "0.2.0"
anes.git = "https://github.com/nfnitloop/anes-rs.git"
# anes.branch = "parse-backspace"
anes.rev = "4fbce0423fd4aab063f6c8122dc33915fb53f2e2"

