[package]
edition = "2024"
name = "regtest"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "*"

[dependencies.ratatui-wasm-backend]
path = "../ratatui-wasm-backend"
features = ["parser"]


[dependencies.ratatui]
version = "*" # whatever ratatui-wasm-backend uses.
default-features = false
features = ["unstable-widget-ref", "macros"]